[tool.poetry]
name = "ex-19"
version = "0.1.0"
description = ""
authors = ["Maria-hub746 <113303447+Maria-hub746@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "ex_19"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.92.0"
uvicorn = "^0.20.0"
fastapi-jwt-auth = "^0.5.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
sqlalchemy = "^2.0.4"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.5"
bcrypt = "^4.0.1"
libgravatar = "^1.0.3"
alembic = "^1.9.4"
psycopg2 = "^2.9.5"
pydantic = {extras = ["email"], version = "^1.10.5"}
cloudinary = "^1.32.0"
fastapi-limiter = "^0.1.5"
redis = "^4.5.1"
fastapi-mail = "^1.2.6"
pytest = "^7.2.2"


[tool.poetry.group.dev.dependencies]
sphinx = "^6.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["."]